<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncryptSampleActivity"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/planText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:hint="@string/please_enter_text_to_be_encrypted"
            android:lines="1" />

        <Button
            android:id="@+id/encryptAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/encrypt" />

        <Button
            android:id="@+id/decryptAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrypt" />

        <TextView
            android:id="@+id/encryptedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            />

        <TextView
            android:id="@+id/decryptedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>